update popularity sort